--- a/.github/workflows/release_tests.yml
+++ b/.github/workflows/release_tests.yml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.13"]
-        os: [macOS-latest, ubuntu-latest, windows-latest]
+        os: [macOS-latest, ubuntu-latest, windows-latest, windows-11-arm]
 
     steps:
       - uses: actions/checkout@v5
